Fix for issue #126 - trim white spaces Fix for issue #129 - navigation rounded edges

--- a/protected/assets/css/style.css
+++ b/protected/assets/css/style.css
@@ -194,6 +194,7 @@ nav.navigation ul li a:hover{
 nav.navigation ul li.active a 
 {
     color:#fff;
+    border-top-left-radius: 8px !important;
 }
 nav.navigation ul li:first-child a:hover
 {
@@ -201,7 +202,7 @@ nav.navigation ul li:first-child a:hover
 }
 nav.navigation ul li:last-child a:hover
 {
-    //border-top-right-radius:8px;
+    border-top-right-radius:8px;
 }
 nav.navigation ul li:first-child.active
 {
